--- a/scss/main.scss
+++ b/scss/main.scss
@@ -92,6 +92,7 @@ html{
     .wrapper{
       @include center();
       @include fullwh();
+      position: relative;
       
       .spinning{
         z-index: -1;
@@ -107,6 +108,50 @@ html{
         display:block;
         padding-bottom: 100%;
       }
+
+      #chmpPick{
+        z-index: 3;
+        color:white;
+        width:200px;
+	      height: 100%;
+        position: absolute;
+        bottom:22px;
+        background-color: transparent;
+        border-bottom: 70px solid rgb(32,36,37);
+	      border-left: 25px solid transparent;
+	      border-right: 25px solid transparent;
+        opacity: 0.6;
+        animation: LockOut 0.5s;
+        
+	      
+        span{
+          width:100%;
+          position:absolute;
+          left:0;
+          bottom:-50px;
+          font-size: 30px;
+          font-family: 'League Spartan', sans-serif;
+        }
+      }
+
+      .chmpPickBorder{
+        z-index: 2;
+        width:210px;
+	      height: 100%;
+        position: absolute;
+        bottom:20px;
+        background-color: transparent;
+        border-bottom: 74px solid rgb(200,170,100);
+	      border-left: 29px solid transparent;
+	      border-right: 29px solid transparent;
+        opacity: 0.6;
+      }
+      
+      #chmpPick:hover{
+        animation: LockIn 0.5s;
+        opacity: 1;
+      }
+
     }
   }
   #champions_container::-webkit-scrollbar 
@@ -114,6 +159,7 @@ html{
     display: none;
   }
   #champions_container{
+    z-index: 99;
     box-sizing: border-box;
     position: absolute;
     top:50%;
@@ -223,5 +269,23 @@ html{
   }
   to{
     transform: scale(1);
+  }
+}
+
+@keyframes LockIn{
+  from{
+    opacity: 0.6;
+  }
+  to{
+    opacity: 1;
+  }
+}
+
+@keyframes LockOut{
+  from{
+    opacity: 1;
+  }
+  to{
+    opacity: 0.6;
   }
 }
